--- a/package.json
+++ b/package.json
@@ -1,25 +1,15 @@
 {
-  "name": "onwaredev",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "name": "learn-starter",
+  "version": "0.1.0",
+  "private": true,
   "scripts": {
-    "dev": "next dev"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/GiuliusONWARE/onwaredev.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/GiuliusONWARE/onwaredev/issues"
-  },
-  "homepage": "https://github.com/GiuliusONWARE/onwaredev#readme",
   "dependencies": {
-    "next": "^10.0.3",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "next": "^10.0.0",
+    "react": "16.13.1",
+    "react-dom": "16.13.1"
   }
 }
